# blamm

./: CMakeLists.txt  README.md
cmake/: FortranScheme.cmake  config.h.in
example/: motifs.jaspar  sequences.mf  settings.cnf
example/sequences/: fileA.fa  fileB.fa  fileC.fa
src/: bls.cpp  bls.h  blstools.cpp  blstools.h  dict.cpp  dict.h  hist.cpp  hist.h  kernel.cu  matrix.cpp  matrix.h  motif.cpp  motif.h  ortho.cpp  ortho.h  phylotree.cpp  phylotree.h  pwmscan.cpp  pwmscan.h  sequence.cpp  sequence.h  settings.cpp  settings.h  species.cpp  species.h
